sdk/python/lib/test/automation/errors/compilation_error/dotnet/MyStack.cs
using Codeinfra;

class MyStack : Stack
{
    public MyStack()
    {
        // Add your resources here
        will not compile
    }
}
